IONiseR v1.5.x

* Moved away from data.table to tibble. Hopefully resolves some indexing 
    issues.

IONiseR v1.1.x
==============

Changes:

* Started updating code to cope with new fast5 file structure

* Fixed bug where reading failed if no 2D reads were present in the collection
    of fast5 files


IONiseR v0.0.1 (Release date: 2015-05-27)
==============

Changes:

* Package created